--- a/geral.css
+++ b/geral.css
@@ -1,22 +1,42 @@
-.calculadora{
-    background: (rgb(0,38, 255);
-    color: rosybrown;
+.calculadora {
+    background: rgb(87, 85, 85);
+    color: black;
     width: 200px;
     padding: 10px;
-    border-radius: 10px;
+    border-radius: 15px;
     text-align: center;
 }
-.calculadora input{
-    background: rgb(hsl(0, 0%, 0%);
-    color: rgb(251, 255,0);
-    border-radius: 8px;
-    padding: 8px; 
+.calculadora input {
+background:rgb(129, 235, 129);
+color: black;
+border-radius: 9px;
+padding: 5px;
 }
 #sptotal {
-    background: saddlebrown;
-    color: saddlebrown;
-    border-radius: 10px;
-    padding: 10px;
+    background: rgb(99, 201, 113);
+    color: black;
+    border-radius: 8px;
+    padding: 4px;
     margin-bottom: 10px;
-    
+}
+.calculadora button{
+margin-top: 10px;
+background: rgb(83, 51, 8);
+color: white;
+padding: 5px 20px;
+border: none;
+}
+.calculadora button:hover {
+    background: rgb(206, 651, 112);
+    color: rgb(0, 0, 0);
+    cursor: pointer;
+}
+.spListaMeses {
+    text-align: start;
+    border-style: dotted;
+    border-color: yellow;
+    border-width: 1px;
+    color: red;
+    background: white;
+    font-size: 10px;
 }
